src/test/deca/context/valid/created/test-comparaison-float-int.deca
//Description :
// Test d'une opération de comparaison
//
// Resultats :
// 


{
    1.5 <3 ;
}
