src/test/deca/context/invalid/created/if-then-else-float-condition.deca
//Description :
// Test d'un if then else avc une condition float
//
// Resultats :
// Erreur

{
    if (1.0) {
        print("Oui");
    } else {
        print("Non");
    }
}
